fixed multiple search in a row bug using cookies

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -317,7 +317,7 @@
   <script>
 
     $(document).on("click","a[name='radio-style-btn']", function (e) {
-      alert("aaaaaaaaa");
+      alert("Inside of radio button onClick function");
       if(document.getElementById('thirty_days_left').checked == true) {
         document.getElementById('thirtyDays').style.visibility = "visible";
         document.getElementById('sixtyDays').style.visibility = "hidden";
