--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -38,7 +38,7 @@
                       </label> 
                       <td>
                         <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
-                      </td> 
+                      </td>
                   </td>
                 </div>
 
@@ -57,16 +57,16 @@
                   	<td class="col-md-3">
   						        <div>
               				  <select class="selector col-md-9" id="sorting">
-                					<option value="none">none</option>
+                					<option value="none" selected="true">none</option>
                           <option value="optName">Opportunity Name</option>
                           <option value="optId">Opportunity ID</option>
                           <option value="days">Days Left</option>
                           <option value="cmanager">Capture Managers</option>
                           <option value="progmanager">Program Managers</option>
                           <option value="pmanager">Proposal Managers</option>
-                          <option value="valuehl" class="desc">Value (High to Low)</option>
-                          <option value="valuelh" class="asc">Value (Low to High)</option>
+                          <option value="value">Value</option>
               				  </select>
+                        
               				  <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
             				  </div>  
                   	</td>
@@ -107,7 +107,7 @@
                   <td><%= o.opptyId %></td>
                   <td>
                     <div class="regular-text a:visited"><%= link_to o.opptyName, o %></div>
-                      <div class="little-text"><%= o.slComments %></div>
+                    <div class="little-text"><%= o.slComments %></div>
                   </td>
                   <td><%= o.proposalDueDate.to_s %></td>
                   <td>Assigned</td>
@@ -340,7 +340,7 @@
         alert (90);
       }
       else {
-        document.getElementById('allDays').style.visibility= "visible";
+        document.getElementById('allDays').style.visibility = "visible";
         document.getElementById('ninetyDays').style.visibility = "hidden";
         document.getElementById('thirtyDays').style.visibility = "hidden";
         document.getElementById('sixtyDays').style.visibility = "hidden";
@@ -349,9 +349,13 @@
     });
 
     $(document).on("click", "a[name='sort-btn']", function (e) {
+
+      localStorage.setItem('sorting',$('#sorting').val() );
       select = document.getElementById('sorting').value;
 
-      if (select == "days")
+      if (select == "none")
+        window.location.assign("<%= browse_index_path %>");
+      else if (select == "days")
         window.location.assign("<%= browse_index_path %>" + "?sort=proposalDueDate");
       else if (select == "optName")
         window.location.assign("<%= browse_index_path %>" + "?sort=opptyName");
@@ -363,11 +367,8 @@
         window.location.assign("<%= browse_index_path %>" + "?sort=programMgr");
       else if (select == "pmanager")
         window.location.assign("<%= browse_index_path %>" + "?sort=proposalMgr");
-      else if (select == "valuehl")
+      else if (select == "value")
         window.location.assign("<%= browse_index_path %>" + "?sort=value");
-      else if (select == "valuelh")
-        window.location.assign("<%= browse_index_path %>" + "?sort=value");
-
     });
 
   </script>
