--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -10,7 +10,7 @@
               <input id="search" name="search" type="text" class="col-md-12" value="">
             </td>
             <td class="col-md-1">
-                 <input id="search-button" name="searchButton" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
+                 <input id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
             </td>
           </tr>  
         </table>
@@ -38,7 +38,7 @@
                       </label> 
                       <td>
                         <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
-                      </td> 
+                      </td>
                   </td>
                 </div>
 
@@ -57,16 +57,16 @@
                     <td class="col-md-3">
                       <div>
                         <select class="selector col-md-9" id="sorting">
-                          <option value="none">none</option>
+                          <option value="none" selected="true">none</option>
                           <option value="optName">Opportunity Name</option>
                           <option value="optId">Opportunity ID</option>
                           <option value="days">Days Left</option>
                           <option value="cmanager">Capture Managers</option>
                           <option value="progmanager">Program Managers</option>
                           <option value="pmanager">Proposal Managers</option>
-                          <option value="valuehl" class="desc">Value (High to Low)</option>
-                          <option value="valuelh" class="asc">Value (Low to High)</option>
+                          <option value="value">Value</option>
                         </select>
+                        
                         <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
                       </div>  
                     </td>
@@ -313,6 +313,9 @@
 
 
 
+
+
+
   <script>
 
 
@@ -363,11 +366,8 @@
         window.location.assign("<%= browse_index_path %>" + "?sort=programMgr");
       else if (select == "pmanager")
         window.location.assign("<%= browse_index_path %>" + "?sort=proposalMgr");
-      else if (select == "valuehl")
+      else if (select == "value")
         window.location.assign("<%= browse_index_path %>" + "?sort=value");
-      else if (select == "valuelh")
-        window.location.assign("<%= browse_index_path %>" + "?sort=value");
-
     });
 
 
