--- a/app/assets/stylesheets/statistics.css.scss
+++ b/app/assets/stylesheets/statistics.css.scss
@@ -10,7 +10,6 @@
 }		
 
 .jumbotron {
-	background-color: #F8F8F8 !important;
 	border-radius: 5px !important;
 }		
 
@@ -25,8 +24,8 @@
 	font-size: 32px
 }	
 
-.selector-container {
-	
+.stats-background {
+	background-color: #F8F8F8 !important;
 }
 
 .selector-year-container {
