--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -3,7 +3,7 @@
     <title>Statistics</title>
   </head>
   <body>
-    <div class="jumbotron col-md-11">
+    <div class="jumbotron col-md-11 stats-background">
       <div class="chart-container col-md-10">
         <h2 class="chart-title" id="chart-title">Request for Proposals by Month</h2>
         <div id="chartdiv"></div>
