search and refresh is fixed

--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -10,7 +10,7 @@
               <input id="search" name="search" type="text" class="col-md-12" value="">
             </td>
             <td class="col-md-1">
-                 <input id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
+                 <input name="searchButton" id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
             </td>
           </tr>  
         </table>
