--- a/app/assets/stylesheets/upload_crm.css.scss
+++ b/app/assets/stylesheets/upload_crm.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .drop-zone {
 	background-color: #E7E7E7;
-	border: dotted 1px #A9A9A9;
+	border: dashed 3px #8E8E8E;
 	min-height: 167px;
 	margin-bottom: 10px
 }
@@ -50,6 +50,6 @@
 	list-style-type: none;
 }
 
-.upload-title {
+.column-title {
 	margin-bottom: 20px !important;
 }
