--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -88,15 +88,15 @@
      <caption><h2 class="black-text">Opportunities</h2></caption>
      <thead>
         <tr>
-        	 <th class="col-md-2"> Opportunity ID </th>
+           <th class="col-md-2"> Opportunity ID </th>
            <th class="col-md-6"> Opportunity Name </th>
            <th class="col-md-2"> Due Date </th>
            <th class="col-md-2"> Status </th>
         </tr>
      </thead>
 
-
-    <tbody id="thirtyDays" style="display: none;">
+    <tbody>
+    <div id="thirtyDays" style="display: none;">
           <% unless @within30days == nil %>
             <% @within30days.each do |o| %>
               <% if @to_do.include?(o) %>
@@ -145,9 +145,9 @@
               <% end %>
             <% end %>
           <% end %>
-    </tbody>
+    </div>
 
-    <tbody id="sixtyDays" style="display:none;">
+    <div id="sixtyDays" style="display:none;">
           <% unless @within60days == nil %>
             <% @within60days.each do |o| %>
               <% if @to_do.include?(o) %>
@@ -196,9 +196,9 @@
               <% end %>
             <% end %>
           <% end %>
-    </tbody>
+    </div>
 
-    <tbody id="ninetyDays" style="display: none;">
+    <div id="ninetyDays" style="display: none;">
           <% unless @within90days == nil %>
             <% @within90days.each do |o| %>
               <% if @to_do.include?(o) %>
@@ -247,10 +247,10 @@
               <% end %>
             <% end %>
           <% end %>
-    </tbody>
+    </div>
 
 
-    <tbody id="allDays" style="display: block;" class="col-md-12">
+    <div id="allDays" style="display: block;" class="col-md-12">
           <% @oppties.each do |o| %>
             <% if @to_do.include?(o) %>
               <tr class="success">
@@ -298,8 +298,8 @@
             <% end %>
           <% end %>
 
-     </tbody>
-
+     </div>
+   </tbody>
   </table>
 
   <div style="float: right !important">
