--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -1,30 +1,44 @@
 <html lang="en">
 <body>
   <div class="jumbotron">
-	<table class="table">
-		<caption><h2 class="black-text">History</h2></caption>
-     	<thead>
-        	<tr>
-        		<th class="col-md-2"> Opportunity ID </th>
-            	<th class="col-md-8"> Opportunity Name </th>
-            	<th class="col-md-2"> Due Date </th>
-        	</tr>
-     	</thead>
+		<caption><h2 class="black-text" style="text-align: center;">History</h2></caption>
 
+	    <div class="row" style="font-weight: bold;">
+	      <div class="col-md-3" style="text-align: center;"> Opportunity ID </div>
+	      <div class="col-md-6"> Opportunity Name </div>
+	      <div class="col-md-3"> Due Date </div>
+	    </div>
+
+	    <hr />
+
+	    <div>
+	      <% unless @hist == nil %>
+	        <% @hist.each do |o| %>
+	            <div class="success row">
+	              <div class="col-md-3" style="text-align: center;"><%= o.opptyId %></div>
+	              <div class="col-md-6">
+	                <div class="regular-text a:visited"><%= link_to o.opptyName, o %></div>
+	                <div class="little-text"><%= o.slComments %></div>
+	              </div>
+	              <div class="col-md-3"><%= o.proposalDueDate.to_s %></div>
+	            </div>
+	        <% end %>
+	      <% end %>
+	    </div>
+
+
+
+
+<!--
 	 	<tbody>
-		    <% @histories.each do |history| %>
+		    < @history.each do |history| %>
 		      <tr>
-		        <td></td><%= link_to history.oppty.opptyName, history.oppty %></td>
-		        <br>
+		      	<td>
+		        <td> < link_to history.oppty.opptyName, history.oppty %> </td>
 		      </tr>
-		    <% end %>
+		    < end %>
 	  	</tbody>
-	</table>
-
-	<div style="float: right !important">
-    	<%= will_paginate @histories %>
-  	</div>
-
+-->
   </div>
 </body>
 </html>
