--- a/app/assets/stylesheets/histories.css.scss
+++ b/app/assets/stylesheets/histories.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Histories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.radio-bar {
+	height: 50px;
+	background-color: #8E8E8E !important;
+}
+
+.selector-button {
+	height: 20px !important;
+	float: right;
+	text-align: center;
+	vertical-align: top;
+	line-height: 22px !important;
+	padding-top:0px !important;
+	color: white !important;
+	background-color: #005DA0 !important;
+	border-color: #005DA0 !important;
+}
+
+.control-label-button {
+	float: left !important;
+}
