fixed the radio buttons functionality and pagination

--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -4,10 +4,10 @@
   	<div class="radio-bar">
   		<div class="col-md-6">
   			<label class="toggle-btn radio black-text col-md-3" style="margin-top: 10px;">
-		      	<input id="myHistory" type="radio" value="mine">My History
+		      	<input id="myHistory" name="myBtn" type="radio" value="mine">My History
 		    </label>
 			<label class="toggle-btn radio black-text col-md-3" style="margin-top: 10px;">
-	      		<input id="allHistory" type="radio" value="all">All History
+	      		<input id="allHistory" name="myBtn" type="radio" value="all">All History
 	    	</label>
 		  	<a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button" style="margin-top: 10px;">&#xe092;</a>
 		</div>
@@ -24,14 +24,14 @@
     <hr />
 
 
-
+<%#
     <div id="showMine" style="display: block;">
 
       									<!-- ATTENTION -->
       <!-- This part of code needs to be written and show only a specific person's history -->
     
     </div>
-
+%>
 
 
     <div id="showAll" style="display: none;">
