--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -83,7 +83,7 @@
     </div>
 
 
-    <caption><h2 class="black-text">Opportunities</h2></caption>
+    <caption><h2 class="black-text" style="text-align: center;">Opportunities</h2></caption>
 
     <div class="row" style="font-weight: bold;">
       <div class="col-md-2" style="text-align: center;"> Opportunity ID </div>
@@ -140,10 +140,12 @@
               <div class="col-md-2"><%= o.proposalDueDate.to_s %></div>
               <div class="col-md-2">This block must be deleted</div>
             </div>
-
           <% end %>
         <% end %>
       <% end %>
+      <div style="float: right !important;">
+        <%= will_paginate @within30days, previous_label: h("<"), next_label: h(">") %>
+      </div>
     </div>
 
     <div id="sixtyDays" style="display:none;">
@@ -192,10 +194,12 @@
               <div class="col-md-2"><%= o.proposalDueDate.to_s %></div>
               <div class="col-md-2">This block must be deleted</div>
             </div>
-
           <% end %>
         <% end %>
       <% end %>
+      <div style="float: right !important;">
+        <%= will_paginate @within60days, previous_label: h("<"), next_label: h(">") %>
+      </div>
     </div>
 
     <div id="ninetyDays" style="display: none;">
@@ -248,6 +252,9 @@
           <% end %>
         <% end %>
       <% end %>
+      <div style="float: right !important;">
+        <%= will_paginate @within90days, previous_label: h("<"), next_label: h(">") %>
+      </div>
     </div>
 
 
@@ -300,16 +307,14 @@
           <% end %>
         <% end %>
       <% end %> 
+      <div style="float: right !important;">
+        <%= will_paginate @oppties, previous_label: h("<"), next_label: h(">") %>
+      </div>
     </div>
 
 
-    <div style="float: right !important">
-      <%= will_paginate @oppties %>
-    </div>
 
   </div>
-
-
 
 
   <script>
