--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -83,7 +83,7 @@
     </div>
 
 
-    <caption><h2 class="black-text">Opportunities</h2></caption>
+    <caption><h2 class="black-text" style="text-align: center;">Opportunities</h2></caption>
 
     <div class="row" style="font-weight: bold;">
       <div class="col-md-2" style="text-align: center;"> Opportunity ID </div>
@@ -304,7 +304,7 @@
 
 
     <div style="float: right !important">
-      <%= will_paginate @oppties %>
+      <%= will_paginate @oppties, previous_label: h("<"), next_label: h(">") %>
     </div>
 
   </div>
