changes to allocated tasks

--- a/app/views/oppties/edit.html.erb
+++ b/app/views/oppties/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Opportunity</h1>
+<h1><%= @oppty.opptyName%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @oppty %> |
 <%= link_to 'Back', browse_index_path %>
