--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -4,10 +4,10 @@
   	<div class="radio-bar">
   		<div class="col-md-6">
   			<label class="toggle-btn radio black-text col-md-3" style="margin-top: 10px;">
-		      	<input id="myHistory" type="radio" value="mine">My History
+		      	<input name="rbtn" id="myHistory" type="radio" value="mine">My History
 		    </label>
 			<label class="toggle-btn radio black-text col-md-3" style="margin-top: 10px;">
-	      		<input id="allHistory" type="radio" value="all">All History
+	      		<input name="rbtn" id="allHistory" type="radio" value="all">All History
 	    	</label>
 		  	<a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button" style="margin-top: 10px;">&#xe092;</a>
 		</div>
@@ -25,12 +25,12 @@
 
 
 
-    <div id="showMine" style="display: block;">
+   <!-- <div id="showMine" style="display: block;">-->
 
       									<!-- ATTENTION -->
       <!-- This part of code needs to be written and show only a specific person's history -->
     
-    </div>
+    <!--</div>-->
 
     <% @histories.each do |o| %>
         <div class="success row">
